--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -15,22 +15,25 @@
       span.text-primary= '1. '
       = 'Фотография или скан действительного документа, удостоверяющего личность'
 
-    .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4 style="border-style: dashed"
-      = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', style: 'min-width: 186px'
+    .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed"
+      = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', id: 'photo-preview-placeholder'
+      img id="photo-preview" style="max-width: 80%; max-height: 100%;"
 
-    .d-flex.mt-4
-      label.btn.btn-primary.flex-grow-1.mr-4
-        / For image file
-        input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0"
-        = 'Загрузить файл'
+    div id="input-photo-controls"
+      .d-flex
+        label.btn.btn-primary.flex-grow-1.mr-4
+          input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" id="input-photo"
+          = 'Загрузить файл'
 
-      label.btn.btn-primary.flex-grow-1
-        / For image file from camera
-        input.custom-file-input.position-absolute type="file" accept="image/*" capture="user" style="height: 0"
-        = 'Открыть камеру'
+        label.btn.btn-primary.flex-grow-1
+          input.custom-file-input.position-absolute type="file" accept="image/*" capture="user" style="height: 0" id="input-camera"
+          = 'Открыть камеру'
 
-    / = f.simple_fields_for :verification_documents do |document|
-    /   = render 'document_field', document: document
+    div id="photo-filename" style="display: none"
+      button.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button" id="clear-file-button"
+        span
+        span aria-hidden="true"
+          | &times;
 
     = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
 
@@ -38,3 +41,5 @@
       = link_to 'Продолжить', step4_client_verifications_path, class: 'btn btn-primary w-100' 
 
   .mb-5.pb-5
+
+= render 'photo_upload_script'
