--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -15,25 +15,26 @@
       span.text-primary= '1. '
       = 'Фотография или скан действительного документа, удостоверяющего личность'
 
-    .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed"
-      = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', id: 'photo-preview-placeholder'
-      img id="photo-preview" style="max-width: 80%; max-height: 100%;"
+    div data-file-input=""
+      .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed"
+        = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', style: 'max-width: 200px', data: {'preview-placeholder': ''}
+        img style="max-width: 80%; max-height: 100%;" data-preview=""
 
-    div id="input-photo-controls"
-      .d-flex
-        label.btn.btn-primary.flex-grow-1.mr-4
-          input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" id="input-photo"
-          = 'Загрузить файл'
+      div data-controls=""
+        .d-flex
+          label.btn.btn-primary.flex-grow-1.mr-4
+            input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
+            = 'Загрузить файл'
 
-        label.btn.btn-primary.flex-grow-1
-          input.custom-file-input.position-absolute type="file" accept="image/*" capture="user" style="height: 0" id="input-camera"
-          = 'Открыть камеру'
+          label.btn.btn-primary.flex-grow-1
+            input.custom-file-input.position-absolute type="file" accept="image/*" capture="user" style="height: 0" data-input=""
+            = 'Открыть камеру'
 
-    div id="photo-filename" style="display: none"
-      button.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button" id="clear-file-button"
-        span
-        span aria-hidden="true"
-          | &times;
+      div style="display: none" data-filename-container=""
+        button.position-relative.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button" data-clear-button=""
+          span.text-truncate.w-100.pr-4 data-filename=""
+          span.position-absolute.px-3 style="right: 0"
+            | &times;
 
     = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
 
