--- a/app/views/client/verifications/verified.html.slim
+++ b/app/views/client/verifications/verified.html.slim
@@ -1,6 +1,11 @@
 .mt-5.pt-5.mx-auto.text-center.w-100 style="max-width: 380px;"
   = image_tag asset_url('thank-you-illustration.svg'), width: 253, style: 'max-width: 253px'
+  h2 = t '.title'
   div = t 'client.verifications.verified.message', account_id: "##{external_id}"
+  - if current_account.return_url.present?
+    = link_to t('.button'), current_account.return_url, class: 'btn btn-primary w-100 mt-5', style: 'max-width: 220px'
+
+
 
 
 
