--- a/app/views/client/verifications/created.slim
+++ b/app/views/client/verifications/created.slim
@@ -4,5 +4,5 @@
   div= raw t '.message', id: verification.id
 
   - if current_account.return_url.present?
-    = link_to t('.button'), current_account.return_url, class: 'btn btn-primary w-100 mt-5', style: 'max-width: 220px'
+    = link_to t('.button'), current_account.return_url, class: 'btn btn-primary w-100 my-5', style: 'max-width: 220px'
 
