--- a/app/views/client/verifications/verified.html.slim
+++ b/app/views/client/verifications/verified.html.slim
@@ -3,7 +3,7 @@
   h2 = t '.title'
   div = t 'client.verifications.verified.message', account_id: "##{external_id}"
   - if current_account.return_url.present?
-    = link_to t('.button'), current_account.return_url, class: 'btn btn-primary w-100 mt-5', style: 'max-width: 220px'
+    = link_to t('.button'), current_account.return_url, class: 'btn btn-primary w-100 my-5', style: 'max-width: 220px'
 
 
 
