--- a/app/views/client/verifications/step1.html+mobile.slim
+++ b/app/views/client/verifications/step1.html+mobile.slim
@@ -1,3 +1,25 @@
-h1 step1
+.container
+  .d-flex.mt-5
+    h1.h4.w-25.m-0.font-weight-bold.small.text-primary.text-uppercase шаг 1
 
-= link_to 'step2', step1_client_verifications_path
+    .d-flex.align-items-center.w-75
+      .progress.w-100 style="height: 4px"
+        .progress-bar role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"
+
+  p.mt-1.small.font-weight-medium Заполните личные данные
+
+  = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
+    h3.h4.mt-4.mb-3.font-weight-bold.text-primary Личные данные
+
+    = f.input :name
+    = f.input :last_name
+    = f.input :patronymic
+
+    = f.input :country
+    = f.input :birth_date, as: :date_picker
+    = f.input :email, as: :email
+
+    .container.fixed-bottom.pb-4
+      = link_to 'Продолжить', step2_client_verifications_path, class: 'btn btn-primary w-100' 
+
+  .mb-5.pb-5
