fix: Mobile styles

--- a/app/assets/stylesheets/verification.scss
+++ b/app/assets/stylesheets/verification.scss
@@ -4,10 +4,12 @@
 
 $color-primary: rgba(72, 91, 193, 1);
 $color-primary-light: rgba(219, 228, 252, 1);
+$color-info: rgba(240, 243, 249, 1);
 
 $theme-colors: (
   "primary": $color-primary,
   "light": $color-primary-light,
+  "info": $color-info,
 );
 
 $grid-gutter-width: 24px !default;
