--- a/app/views/client/verifications/_photo_instruction.html.slim
+++ b/app/views/client/verifications/_photo_instruction.html.slim
@@ -1,6 +1,4 @@
-.mt-4.bg-light.px-2.py-3.rounded
-  h5.h6.font-weight-bold.mt-0.mb-3.text-primary Инструкция:
-
+.mt-4.bg-info.px-2.py-3.rounded
   .d-flex.align-items-center.mb-2
     .flex-shrink-0.mr-2.align-self-start
       = image_tag asset_url('file-earmark-check@2x.png'), width: 13
