--- a/app/views/client/verifications/step3.html+mobile.slim
+++ b/app/views/client/verifications/step3.html+mobile.slim
@@ -1,46 +1,41 @@
-.container
-  .d-flex.mt-5
-    h1.h4.w-25.m-0.font-weight-bold.small.text-primary.text-uppercase шаг 3
+.d-flex.mt-4
+  h1.h4.w-25.m-0.font-weight-bold.small.text-primary Шаг 3 из 4
 
-    .d-flex.align-items-center.w-75
-      .progress.w-100 style="height: 4px"
-        .progress-bar role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+  .d-flex.align-items-center.w-75
+    .progress.w-100 style="height: 4px"
+      .progress-bar role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
 
-  p.mt-1.small.font-weight-medium Загрузите фото документа
+= simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
+  p.mt-3.small.font-weight-semibold
+    = 'Загрузите фотографию или скан действительного документа, удостоверяющего личность'
 
-  = simple_form_for verification, url: form_path, html: { multipart: true, novalidate: false } do |f|
-    h3.h4.mt-4.mb-3.font-weight-bold.text-primary Загрузите фото документа
+  div data-file-input=""
+    .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed"
+      = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', style: 'max-width: 200px', data: {'preview-placeholder': ''}
+      img style="max-width: 80%; max-height: 100%;" data-preview=""
 
-    p.font-weight-semibold
-      span.text-primary= '1. '
-      = 'Фотография или скан действительного документа, удостоверяющего личность'
+    div data-controls=""
+      .d-flex
+        label.btn.btn-primary.flex-grow-1.mr-4
+          input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
+          = 'Загрузить файл'
 
-    div data-file-input=""
-      .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-4 style="height: 230px; border-style: dashed"
-        = image_tag asset_url('photo-doc-example-1@2x.png'), width: 186, class: 'w-50', style: 'max-width: 200px', data: {'preview-placeholder': ''}
-        img style="max-width: 80%; max-height: 100%;" data-preview=""
+        label.btn.btn-primary.flex-grow-1
+          input.custom-file-input.position-absolute type="file" accept="image/*" capture="user" style="height: 0" data-input=""
+          = 'Открыть камеру'
 
-      div data-controls=""
-        .d-flex
-          label.btn.btn-primary.flex-grow-1.mr-4
-            input.custom-file-input.position-absolute type="file" accept="image/*" style="height: 0" data-input=""
-            = 'Загрузить файл'
+    div style="display: none" data-filename-container=""
+      button.position-relative.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button" data-clear-button=""
+        span.text-truncate.w-100.pr-4 data-filename=""
+        span.position-absolute.px-3 style="right: 0"
+          | &times;
 
-          label.btn.btn-primary.flex-grow-1
-            input.custom-file-input.position-absolute type="file" accept="image/*" capture="user" style="height: 0" data-input=""
-            = 'Открыть камеру'
+  = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
 
-      div style="display: none" data-filename-container=""
-        button.position-relative.btn.btn-outline-secondary.d-flex.justify-content-between.w-100 type="button" data-clear-button=""
-          span.text-truncate.w-100.pr-4 data-filename=""
-          span.position-absolute.px-3 style="right: 0"
-            | &times;
+.container.fixed-bottom.pb-4.d-flex
+  = link_to 'Назад', step2_client_verifications_path, class: 'btn btn-outline-primary font-weight-semibold w-100 mr-4', style: 'max-width: 130px'
+  = link_to 'Продолжить', step4_client_verifications_path, class: 'btn btn-primary font-weight-semibold w-100' 
 
-    = render 'photo_instruction', first_point: 'Убедитесь, что документ на фото размещен полностью, края не обрезаны, информация хорошо считывается'
-
-    .container.fixed-bottom.pb-4
-      = link_to 'Продолжить', step4_client_verifications_path, class: 'btn btn-primary w-100' 
-
-  .mb-5.pb-5
+.mb-5.pb-5
 
 = render 'photo_upload_script'
