feautre: Add cached images to parital

--- a/app/views/client/verifications/_photo_upload_script.slim
+++ b/app/views/client/verifications/_photo_upload_script.slim
@@ -108,7 +108,7 @@ javascript:
     inputsList.forEach(input => {
       if (input) {
         input.addEventListener('change', onInputChange);
-        showCachedPhoto(input);
+        // showCachedPhoto(input);
       }
     });
 
