--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -5,8 +5,12 @@ p.small.mb-2
 - element_id = "document-" + document.index.to_s
 div id="#{element_id}" data-file-input=""
   .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
-    = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
-    img style="max-width: 80%; max-height: 100%;" data-preview=""
+    - if document.object.file.cached?
+      = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}, style: 'display: none'
+      img style="max-width: 80%; max-height: 100%;" data-preview="" src=tmp_path(document.object.file_cache)
+    -else
+      = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+      img style="max-width: 80%; max-height: 100%;" data-preview=""
 
   div data-controls=""
     label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer" class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
