--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -12,7 +12,7 @@ div id="#{element_id}" data-file-input=""
       = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
       img style="max-width: 80%; max-height: 100%;" data-preview=""
 
-  div data-controls=""
+  div data-controls="" style=(document.object.file.cached? ? 'display: none;' : '')
     label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer" class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
       span.input-group-prepend
         span.input-group-text.bg-primary.text-white.border-0.rounded-0
@@ -21,7 +21,7 @@ div id="#{element_id}" data-file-input=""
         | Файл не выбран
       input.custom-file-input.position-absolute data-index=document.index value=document.object.file type="file" name=document.object_name+'[file]' accept=document.object.document_type.content_types.join(',')  style="height: 0" data-input=""
 
-  div style="display: none" data-filename-container=""
+  div style=(document.object.file.cached? ? '' : 'display: none;') data-filename-container=""
     div.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
       span.input-group-prepend
         span.input-group-text.bg-light.text-black.border-0.rounded-0
