--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -7,7 +7,7 @@ div id="#{element_id}" data-file-input=""
   .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
     - if document.object.file.cached?
       = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}, style: 'display: none'
-      img style="max-width: 80%; max-height: 100%;" data-preview="" src=tmp_full_path(document.object.file_cache)
+      img style="max-width: 80%; max-height: 100%;" data-preview="" src="/#{document.object.file.cache_path}"
     -else
       = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
       img style="max-width: 80%; max-height: 100%;" data-preview=""
@@ -35,8 +35,7 @@ div id="#{element_id}" data-file-input=""
     div.d-block.invalid-feedback
       = document.object.errors.full_messages.join(', ')
 
-  = document.input :remove_file, as: :hidden, input_html: { data: { 'remove-input': '' } }
-  = document.input :file_cache, as: :hidden
+  = document.input :file_cache, as: :hidden, input_html: { data: { 'file-cache-input': '' } }
   = document.input :document_type_id, as: :hidden
 
 javascript:
