--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -5,10 +5,14 @@ p.small.mb-2
 - element_id = "document-" + document.index.to_s
 div id="#{element_id}" data-file-input=""
   .img-thumbnail.d-flex.align-items-center.justify-content-center.py-4.mb-3 style="height: 230px; border-style: dashed"
-    = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
-    img style="max-width: 80%; max-height: 100%;" data-preview=""
+    - if document.object.file.cached?
+      = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}, style: 'display: none'
+      img style="max-width: 80%; max-height: 100%;" data-preview="" src="/#{document.object.file.cache_path}"
+    -else
+      = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+      img style="max-width: 80%; max-height: 100%;" data-preview=""
 
-  div data-controls=""
+  div data-controls="" style=(document.object.file.cached? ? 'display: none;' : '')
     label.form-control.p-0.m-0.input-group.overflow-hidden style="cursor: pointer" class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
       span.input-group-prepend
         span.input-group-text.bg-primary.text-white.border-0.rounded-0
@@ -17,13 +21,13 @@ div id="#{element_id}" data-file-input=""
         | Файл не выбран
       input.custom-file-input.position-absolute data-index=document.index value=document.object.file type="file" name=document.object_name+'[file]' accept=document.object.document_type.content_types.join(',')  style="height: 0" data-input=""
 
-  div style="display: none" data-filename-container=""
+  div style=(document.object.file.cached? ? '' : 'display: none;') data-filename-container=""
     div.form-control.p-0.m-0.input-group.overflow-hidden.flex-nowrap class=((document.object.errors.full_messages.any?)? 'border-danger' : '')
       span.input-group-prepend
         span.input-group-text.bg-light.text-black.border-0.rounded-0
           | Файл загружен
       span.flex-grow-1.d-flex.align-items-center.justify-content-center.text-muted.position-relative style="min-width: 0"
-        span.text-truncate.w-75.pr-3 data-filename=""
+        span.text-truncate.w-75.pr-3 data-filename='' =File.basename(document.object.file_cache || '')
         button.btn.text-muted.position-absolute.px-3 style="right: 0" type="button" data-clear-button=""
           | &times;
 
@@ -31,8 +35,7 @@ div id="#{element_id}" data-file-input=""
     div.d-block.invalid-feedback
       = document.object.errors.full_messages.join(', ')
 
-  = document.input :remove_file, as: :hidden, input_html: { data: { 'remove-input': '' } }
-  = document.input :file_cache, as: :hidden
+  = document.input :file_cache, as: :hidden, input_html: { data: { 'file-cache-input': '' } }
   = document.input :document_type_id, as: :hidden
 
 javascript:
