--- a/app/views/client/verifications/_document_field.slim
+++ b/app/views/client/verifications/_document_field.slim
@@ -9,7 +9,7 @@ div id="#{element_id}" data-file-input=""
       = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}, style: 'display: none'
       img style="max-width: 80%; max-height: 100%;" data-preview="" src="/#{document.object.file.cache_path}"
     -else
-      = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}
+      = image_tag asset_url(document.object.document_type.placeholder_photo || ''), width: 186, class: 'w-50', data: {'preview-placeholder': ''}, style: 'max-width: 200px'
       img style="max-width: 80%; max-height: 100%;" data-preview=""
 
   div data-controls="" style=(document.object.file.cached? ? 'display: none;' : '')
